--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,7 @@ header{
 	bottom: 0;
 	opacity: 0;
 	visibility: hidden;
-	padding: 2rem;
+	padding: 2.3rem;
 	text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.4);
 	transition: all .3s;
 }
@@ -625,4 +625,490 @@ footer{
 	color: #fff;
 	border-radius: .3rem;
 	box-shadow: 0 0.1rem 0.6rem #00000009;
+}
+
+@media screen and (max-width: 1215px){
+	.footer-content{
+		width: 70%;
+	}
+}
+
+@media screen and (max-width: 1050px){
+	.banner h1{
+		font-size: 3rem;
+		margin-bottom: 1.8rem;
+	}
+
+	.banner p{
+		font-size: 1.9rem;
+		margin-bottom: 1.8rem;
+	}
+
+	.banner button{
+		padding: 0.8rem 2.8rem;
+		border-radius: 5px;
+	}
+
+	.sessao-orcamento form{
+		margin: 7rem 2rem auto 2rem;
+	}
+
+	.conhecimentos{
+		row-gap: 1.4rem;
+	}
+
+	.sessao-projetos{
+		margin-top: 1rem;
+	}
+
+	.card{
+		width: 17rem;
+		height: 24rem;
+	}
+
+	.card:hover .card-info{
+		bottom: 1.5rem;
+	}
+
+	.footer-content{
+		width: 71%;
+	}
+
+	.social-list a{
+		margin: 0 1.5rem;
+	}
+}
+
+@media screen and (max-width: 900px){
+	.banner h1{
+		font-size: 2.5rem;
+		margin-bottom: 1.5rem;
+	}
+
+	.banner p{
+		font-size: 1.8rem;
+		margin-bottom: 1.6rem;
+	}
+
+	.banner button{
+		padding: 0.8rem 2.3rem;
+	}
+
+	.sessao-header h1{
+		margin-bottom: 3rem;
+	}
+
+	.conhecimento:nth-child(2) h3{/*CSS*/
+		padding-left: .9rem;
+		padding-top: 3rem;
+	}
+
+	.conhecimento:nth-child(5) h3{/*BOOTSTRAP*/
+		padding-left: .9rem;
+		padding-top: 3rem;
+	}
+
+	.conhecimento:nth-child(3) h3{/*DESIGN*/
+		padding-left: .7rem;
+		padding-top: 6rem;
+	}
+
+	.conhecimento:nth-child(6) h3{/*GIT E GITHUB*/
+		padding-left: .9rem;
+		padding-top: 5.5rem;
+	}
+
+	.conhecimento:nth-child(2) i{/*CSS*/
+		padding-left: .9rem;
+		padding-top: 2.7rem;
+	}
+
+	.conhecimento:nth-child(5) i{/*BOOTSTRAP*/
+		padding-left: .9rem;
+		padding-top: 2.7rem;
+	}
+
+	.conhecimento:nth-child(3) i{/*DESIGN*/
+		padding-left: .7rem;
+		padding-top: 6rem;
+	}
+
+	.conhecimento:nth-child(6) i{/*GIT E GITHUB*/
+		padding-left: .9rem;
+		padding-top: 5.5rem;
+	}
+
+	.sessao-projetos{
+		margin-top: 10rem;
+	}
+
+	.card{
+		width: 14rem;
+		height: 22rem;
+	}
+
+	.card:hover .card-info{
+		bottom: .1rem;
+	}
+
+	.card-info h2{
+		font-size: 1.5rem;
+	}
+
+	.card-info button{
+		width: 7.2rem;
+		height: 1.9rem;
+	}
+
+	.contato-left{
+		width: 50%;
+	}
+
+	.contato-right{
+		width: 50%;
+		background-color: #eee;
+		padding: 1rem 3.5rem 3rem 4.5rem;
+	}
+
+	.sessao-contato h1{
+		font-size: 2.8rem;
+	}
+
+	.field{
+		font-size: 1.1rem;
+	}
+
+	.field-label{
+		font-size: 1.1rem;
+	}
+
+	.sessao-orcamento h1{
+		font-size: 2.3rem;
+	}
+
+	.sessao-orcamento form{
+		margin: 6rem 2rem;
+		row-gap: 1rem;
+	}
+
+	.sessao-orcamento label{
+		font-size: 1.4rem;
+	}
+
+	.footer-content{
+		width: 75%;
+	}
+
+	.footer-content p{
+		font-size: 1rem;
+	}
+
+	.social-list a{
+		margin: 0 1.5rem 0 0;
+	}	
+}
+
+@media screen and (max-width: 768px){
+	.banner{
+		left: 10%;
+	}
+
+	.banner h1{
+		font-size: 2.2rem;
+		margin-bottom: 1rem;
+	}
+
+	.banner p{
+		font-size: 1.8rem;
+		margin-bottom: 1rem;
+	}
+
+	.banner button{
+		padding: 0.75rem 2.5rem;
+	}
+
+	.sessao-header h1{
+		font-size: 2.7rem;
+		border-bottom: 2px solid #6a3093;
+		margin-bottom: 2rem;
+	}
+
+	.conhecimento-header i{
+		font-size: 2.2rem;
+	}
+
+	.conhecimento:nth-child(2) h3{/*CSS*/
+		padding-top: 4rem;
+	}
+
+	.conhecimento:nth-child(5) h3{/*BOOTSTRAP*/
+		padding-top: 4rem;
+	}
+
+	.conhecimento:nth-child(3) h3{/*DESIGN*/
+		padding-top: 8rem;
+	}
+
+	.conhecimento:nth-child(6) h3{/*GIT E GITHUB*/
+		padding-top: 7.5rem;
+	}
+
+	.conhecimento:nth-child(2) i{/*CSS*/
+		padding-top: 4rem;
+	}
+
+	.conhecimento:nth-child(5) i{/*BOOTSTRAP*/
+		padding-top: 4rem;
+	}
+
+	.conhecimento:nth-child(3) i{/*DESIGN*/
+		padding-top: 8rem;
+	}
+
+	.conhecimento:nth-child(6) i{/*GIT E GITHUB*/
+		padding-top: 7.5rem;
+	}
+
+	.conhecimento-text{
+		font-family: var(--font-secundary);
+		margin-top: 0.8rem;
+	}
+
+	.conhecimentos-img-wrapper{
+		grid-column: 7 / 11;
+  	grid-row: 3;
+	}
+
+	.sessao-projetos{
+		margin-top: 14rem;
+	}
+}
+
+@media screen and (max-width: 500px){
+	.banner h1{
+		font-size: 1.2rem;
+		margin-bottom: .1rem;
+	}
+
+	.banner p{
+		font-size: 1rem;
+	}
+
+	.banner button{
+		padding: 0.5rem 1rem;
+	}
+
+	.sessao-header h1{
+		font-size: 1.8rem;
+		margin-bottom: 2rem;
+	}
+
+	.conhecimentos{
+		margin-right: 5rem;
+	}
+
+	.conhecimento-header i{
+		font-size: 1.8rem;
+	}
+
+	.conhecimento-header h3{
+		font-size: 1.5rem;
+	}
+
+	.conhecimento:nth-child(1) h3{/*HTML*/
+		grid-column: 11 / 14;
+		grid-row: 2 / 3;
+	}
+
+	.conhecimento:nth-child(2) h3{/*CSS*/
+		padding-top: 15rem;
+	}
+
+	.conhecimento:nth-child(4) h3{/*JAVASCRIPT*/
+		grid-column: 11 / 14;
+		grid-row: 1 / 3;
+	}
+
+	.conhecimento:nth-child(5) h3{/*BOOTSTRAP*/
+		padding-top: 15rem;
+	}
+
+	.conhecimento:nth-child(3) h3{/*DESIGN*/
+		padding-top: 30rem;
+	}
+
+	.conhecimento:nth-child(6) h3{/*GIT E GITHUB*/
+		padding-top: 29.5rem;
+	}
+
+	.conhecimento:nth-child(1) i{/*HTML*/
+		grid-column: 11 / 14;
+		grid-row: 1 / 3;
+	}
+
+	.conhecimento:nth-child(2) i{/*CSS*/
+		padding-top: 15rem;
+	}
+
+	.conhecimento:nth-child(4) i{/*JAVASCRIPT*/
+		grid-column: 11 / 14;
+		grid-row: 1 / 3;
+	}
+
+	.conhecimento:nth-child(5) i{/*BOOTSTRAP*/
+		padding-top: 15rem;
+	}
+
+	.conhecimento:nth-child(3) i{/*DESIGN*/
+		padding-top: 30rem;
+	}
+
+	.conhecimento:nth-child(6) i{/*GIT E GITHUB*/
+		padding-top: 29.5rem;
+	}
+
+	.conhecimento-text{
+		font-size: .8rem;
+		margin-top: 0.4rem;
+		margin-left: 2rem;
+	}
+
+	.conhecimentos-img-wrapper{
+    grid-column: 9 / -4;
+    grid-row: 7 / -1
+	}
+
+	.conhecimentos-img-wrapper img{
+		width: 100%;
+		height: 100%;
+	}
+
+	.sessao-projetos{
+		height: 110vh;
+		margin-top: 40rem;
+	}
+
+	.projetos{
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.card{
+		margin-top: 1rem;
+		width: 50%;
+		height: 14rem;
+	}
+
+	.card-info{
+		bottom: -.5rem;
+		padding: 2.3rem;
+	}
+
+	.card:hover .card-info{
+		bottom: -1rem; 
+		padding: 1.8rem; 
+	}
+
+	.card-info h2{
+		font-size: 1.2rem;
+	}
+
+	.card-info h3{
+		font-size: 1rem;
+	}
+
+	.card-info button{
+		font-size: 0.7rem;
+		width: 6rem;
+		height: 1rem;
+	}
+
+	.card-info p{
+		text-align: left;
+		font-size: .8rem;
+		width: 100%;
+		margin-bottom: 1rem;
+	}
+
+	.contato-wrapper{
+		overflow: hidden;
+		width: 80%;
+	}
+
+	.contato-left{
+		width: 60%;
+	}
+
+	.contato-right{
+		width: 40%;
+		padding: 3rem;
+	}
+
+	.sessao-contato h1{
+		font-size: 2rem;
+	}
+
+	.field{
+		border-bottom: 2px dashed #636363;
+		font-size: .9rem;
+	}
+
+	.field-label{
+		font-size: .8rem;
+	}
+
+	.input-group{
+		position: relative;
+		left: 4rem;
+	}
+
+	.btn-submit{
+		font-size: 1.2rem;
+		width: 100%;
+		height: 2rem;
+		margin-top: 2rem;
+	}
+
+	.input-group textarea{
+		padding-top: .8rem;
+		max-width: 25rem;
+		max-height: 3rem;
+	}
+
+	.field:focus ~ lable{
+		top: 0;
+		font-size: 0.7rem;
+	}
+
+ .orcamento-wrapper{
+ 	width: 80%;
+ }
+
+	.sessao-orcamento h1{
+		font-size: 1.8rem;
+	}
+
+	.sessao-orcamento form{
+		margin: 6rem 2rem;
+		row-gap: 1rem;
+	}
+
+	.sessao-orcamento label{
+		font-size: 1.4rem;
+	}
+
+	.sidebar{
+		width: 18rem;
+	}
+
+	.menu{
+		position: absolute;
+		top: 40%;
+		left: 55%;
+	}
+
+	.show-menu .hamburguer{
+		right: 15rem;
+	}
 }
