--- a/css/style.css
+++ b/css/style.css
@@ -1031,9 +1031,9 @@ footer{
 		margin-bottom: 1rem;
 	}
 
-	.sessao-contato{
+	/*.sessao-contato{
 		margin-top: 5rem;
-	}
+	}*/
 
 	.contato-wrapper{
 		width: 80%;
