--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&family=Muli:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap");
 
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
 
 *{
 	margin: 0;
@@ -237,162 +237,6 @@ header{
 	background-color: #a044ff;
 }
 
-.conhecimentos{
-	display: grid;
-	grid-template-columns: repeat(16, 1fr);
-	grid-template-rows: repeat(6, 6rem);
-	row-gap: .5rem;
-}
-
-.conhecimento:nth-child(1){
-	grid-column: 4 / 7;
-	grid-row: 1 / 3;
-}
-
-.conhecimento:nth-child(2){
-	grid-column: 3 / 6;
-	grid-row: 3 / 5;
-}
-
-.conhecimento:nth-child(3){
-	grid-column: 4 / 7;
-	grid-row: 5 / -1;
-}
-
-.conhecimento:nth-child(4){
-	grid-column: 11 / 14;
-	grid-row: 1 / 3;
-}
-
-.conhecimento:nth-child(5){
-	grid-column: 12 / 15;
-	grid-row: 3 / 5;
-}
-
-.conhecimento:nth-child(6){
-	grid-column: 11 / 14;
-	grid-row: 5 / -1;
-}
-
-.sessao-conhecimentos{
-	background-color: #f5f5f5;
-}
-
-.sessao-header{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.sessao-header h1{
-	font-family: var(--font-primary);
-	font-size: 3rem;
-	color: #4b4b4b;
-	border-bottom: 3px solid #6a3093;
-	margin-bottom: 1.5rem;
-}
-
-.conhecimento-header{
-	display: flex;
-	align-items: center;
-	color: #4b4b4b;
-}
-
-.conhecimento-header i{
-	font-size: 2.5rem;
-}
-
-.conhecimento-header h3{
-	font-family: var(--font-secundary);
-	font-size: 2rem;
-	padding-left: 1rem;
-}
-
-.conhecimento-text{
-	font-family: var(--font-secundary);
-	margin-top: 1rem;
-}
-
-.conhecimentos-img-wrapper{
-	grid-column: 7 / 11;
-	grid-row: 2 / 6;
-	width: 100%;
-}
-
-.conhecimentos-img-wrapper img{
-	object-fit: cover;
-	width: 100%;
-}
-
-.projetos{
-	display: flex;
-	justify-content: space-evenly;
-}
-
-.card{
-	width: 18rem;
-	height: 25rem;
-	position: relative;
-}
-
-.card-img-wrapper{
-	width: 100%;
-	height: 100%;
-	background-color: #262626;
-	border-radius: .5rem;
-}
-
-.card-img-wrapper img{
-	object-fit: cover;
-	width: 100%;
-	height: 100%;
-	border-radius: .5rem;
-	opacity: .8;
-	transition: opacity .3s;
-}
-
-.card:hover .card-img-wrapper img{
-	opacity: .5;
-}
-
-.card-info{
-	position: absolute;
-	bottom: 0;
-	opacity: 0;
-	visibility: hidden;
-	padding: 2.3rem;
-	text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.4);
-	transition: all .3s;
-}
-
-.card:hover .card-info{
-	bottom: 2rem;
-	opacity: 1.0;
-	visibility: visible;
-}
-
-.card-info h2{
-	font-family: var(--font-primary);
-	font-size: 2rem;
-	font-weight: 500;
-	color: #eee;
-}
-
-.card-info h3{
-	font-family: var(--font-secundary);
-	font-weight: bolder;
-	color: #ff4081;
-	margin-bottom: 1.5rem;
-}
-
-.card-info p{
-	font-family: var(--font-secundary);
-	color: #eee;
-	font-weight: 400;
-	width: 80%;
-	margin-bottom: 2rem;
-}
-
 .btn{
 	background: #6a3093;
 	background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
@@ -404,13 +248,7 @@ header{
 	text-shadow: 0 .1rem .8rem rgba(0, 0, 0, 0.4);
 }
 
-.card-info button{
-	width: 8rem;
-	height: 2.5rem;
-}
-
 .sessao-contato{
-	margin-top: 1rem;
 	width: 100%;
 	height: 100vh;
 	background-color: #272727;
